--- a/literatur/literatur.bib
+++ b/literatur/literatur.bib
@@ -279,18 +279,16 @@
 	url = {https://www.fom.de},
 	urldate = {2021-08-01}
 }
-
 % KI-generierte Quellen
 
-@misc{KI_Claude_2025_Taxonomie,
-	usera = {KI-generierte Inhalte},
-	author = {{Anthropic Claude 4 Sonnet}},
+@software{KI_Claude_2025_Taxonomie,
+	author = {Anthropic},
 	title = {Erstellung einer tabellarischen Taxonomie-Übersicht für Literaturrecherche},
-	year = {2025},
-	month = {August},
+	date = {2025-08-02},
+	version = {Claude 4 Sonne},
+	url = {https://claude.ai},
+	keywords = {KI-Zitat},
 	howpublished = {\url{claude.ai}},
-	note = {Generiert am 02.08.2025, Siehe KI.1}},
-	addendum = {Anthropic Claude 4 Sonnet},
-	keywords = {ai-generated}
+	note = {Detailierter Prompt und Antwort Siehe Anhang {KI:1}}
 }
 
