--- a/kapitel/anhang/ki_anhang.tex
+++ b/kapitel/anhang/ki_anhang.tex
@@ -6,7 +6,7 @@ Im Rahmen dieser Arbeit wurden KI-Tools zur Unterstützung bei verschiedenen Auf
 % TODO
 \todo{Clear up Appendix Example with instructions from Discord}
 \subsection*{KI.1 KI-Assistent - Tabellenerstellung}\label{KI:1}
-\textbf{Verwendungszweck:} Erstellung einer strukturierten Tabelle zur Übersicht der Forschungsmethodik\footcite{KI_Claude_2025_Taxonomie}
+\textbf{Verwendungszweck:} Erstellung einer strukturierten Tabelle zur Übersicht der Forschungsmethodik.
 
 \textbf{Prompt:}
 \begin{quote}
