--- a/literatur/literatur.bib
+++ b/literatur/literatur.bib
@@ -281,14 +281,14 @@
 }
 % KI-generierte Quellen
 
-@software{KI_Claude_2025_Taxonomie,
-	author = {Anthropic},
-	title = {Erstellung einer tabellarischen Taxonomie-Übersicht für Literaturrecherche},
-	date = {2025-08-02},
-	version = {Claude 4 Sonne},
-	url = {https://claude.ai},
+@software{KI_ChatGPT_2025_Beispiel,
+	author = {OpenAI},
+	title = {Beispiel des Einsatzes von ChatGPT mit Screenshots},
+	date = {2025-12-07},
+	version = {ChatPGT 2025-12-07},
+	url = {https://chatgpt.com/},
 	keywords = {KI-Zitat},
-	howpublished = {\url{claude.ai}},
-	note = {Detailierter Prompt und Antwort Siehe Anhang {KI:1}}
+	howpublished = {\url{https://chatgpt.com/}},
+	note = {Detailierter Prompt und Antwort Siehe Anhang A.1}}
 }
 
