--- a/kapitel/anhang/ki_anhang.tex
+++ b/kapitel/anhang/ki_anhang.tex
@@ -1,26 +1,29 @@
 \newpage
-\subsection*{Anhang KI: Dokumentation der KI-Prompts}
+\subsection*{Anhang A: Dokumentation der KI-Prompts}
 \addcontentsline{toc}{section}{Anhang KI: Dokumentation der KI-Prompts}
 
 Im Rahmen dieser Arbeit wurden KI-Tools zur Unterstützung bei verschiedenen Aufgaben eingesetzt. Gemäß den Richtlinien der FOM Hochschule werden hier alle verwendeten Prompts transparent dokumentiert.
-% TODO
-\todo{Clear up Appendix Example with instructions from Discord}
-\subsection*{KI.1 KI-Assistent - Tabellenerstellung}\label{KI:1}
-\textbf{Verwendungszweck:} Erstellung einer strukturierten Tabelle zur Übersicht der Forschungsmethodik.
 
-\textbf{Prompt:}
-\begin{quote}
-\textit{„Erstelle eine Übersichtstabelle für die Forschungsmethodik in LaTeX.
- Die Tabelle soll alle relevanten Kategorien zeigen und die für diese Arbeit gewählten Ansätze hervorheben.
- Stelle sicher, dass die Tabelle gut lesbar formatiert ist und alle notwendigen Informationen enthält."}
+\subsubsection*{A.1 Beispiel ChaGPT mit Screenshot}\
+\textbf{Verwendungszweck:} Beispiel des Einsatzes von ChatGPT mit Screenshots.
 
-\textit{Gewählte Einordnung für diese Arbeit:}
-\textit{- Forschungsansatz: Qualitativ-quantitativ}
-\textit{- Datenerhebung: Systematische Literaturrecherche}
-\textit{- Analysemethoden: Inhaltanalyse und Statistik}
-\textit{- Zielgruppe: Akademische Forscher und Praktiker}
-\textit{- Zeitrahmen: Repräsentative Quellen der letzten Jahre}
-\end{quote}
+\begin{figure}[H]
+    \centering
+    \caption[]{Beispiel des Einsatzes von ChatGPT mit Screenshots}
+	\label{fig:Beispielbild}
+    \includegraphics[width=1\textwidth]{abbildungen/ki_belege/ChatGPT_beispiel_2025-12-07 10-28-58}
+\end{figure}
 
-\textbf{Antwort:}
 
+\subsubsection*{A.2 Beispiel Claude mit Markdown Export zu PDF}\
+\textbf{Verwendungszweck:} Beispiel des Einsatzes von Claude mit Markdown export zu PDF.
+
+\includepdf[
+    pages=-,
+    pagecommand={
+        \thispagestyle{fancy}
+        \stepcounter{page}  % Seitenzähler weiterzählen
+    },
+    scale=0.9,
+    offset=0 -1.5cm
+]{abbildungen/ki_belege/claude_prompt_als_pdf_exportieren.pdf}
