--- a/literatur/literatur.bib
+++ b/literatur/literatur.bib
@@ -292,3 +292,13 @@
 	note = {Detailierter Prompt und Antwort Siehe Anhang A.1}}
 }
 
+@software{KI_Claude_2025_Beispiel,
+	author = {Anthrophic},
+	title = {Beispiel des Einsatzes von Claude mit Markdown-Export zu PDF},
+	date = {2025-12-07},
+	version = {Claude Sonnet 4.5},
+	url = {hhttps://claude.ai/},
+	keywords = {KI-Zitat},
+	howpublished = {\url{https://claude.ai/}},
+	note = {Detailierter Prompt und Antwort Siehe Anhang A.2}}
+}
