--- a/literatur/literatur.bib
+++ b/literatur/literatur.bib
@@ -302,3 +302,14 @@
 	howpublished = {\url{https://claude.ai/}},
 	note = {Detailierter Prompt und Antwort Siehe Anhang A.2}}
 }
+
+@software{KI_Claude_2025_Taxonomie,
+	author = {Anthropic},
+	title = {Taxonomie-Unterstuetzung mit Claude},
+	date = {2025-12-07},
+	version = {Claude Sonnet 4.5},
+	url = {https://claude.ai/},
+	keywords = {KI-Zitat},
+	howpublished = {\url{https://claude.ai/}},
+	note = {Platzhalter-Eintrag zur Aufloesung des Referenzschluessels}
+}
