--- a/skripte/meta.tex
+++ b/skripte/meta.tex
@@ -3,25 +3,25 @@
 %-----------------------------------
 
 % Autor
-\newcommand{\myAutor}{Max Mustermann}
+\newcommand{\myAutor}{Jan Strama}
 
 % Adresse
-\newcommand{\myAdresse}{Heidestra\ss e 17 \\ \> \> \> 51147 Köln}
+\newcommand{\myAdresse}{Trivastra\ss e 33 \\ \> \> \> 80637 München}
 
 % Titel der Arbeit
-\newcommand{\myTitel}{LATEX-Vorlage - mit Biblatex}
+\newcommand{\myTitel}{Prototypische Entwicklung eines KI-gestützten Codegenerierungssystems für komplexe SaaS-Plattformen – Eine Machbarkeitsuntersuchung am Beispiel von ServiceNow}
 
 % Betreuer
-\newcommand{\myBetreuer}{Prof. Dr. Peter Lustig}
+\newcommand{\myBetreuer}{Prof. Dr. Alexander Maximilian Lutz}
 
 % Lehrveranstaltung
-\newcommand{\myLehrveranstaltung}{Modul Nr. 1}
+\newcommand{\myLehrveranstaltung}{Vorbereitungsseminar zur Bachelor-Thesis}
 
 % Matrikelnummer
-\newcommand{\myMatrikelNr}{123456}
+\newcommand{\myMatrikelNr}{684180}
 
 % Ort
-\newcommand{\myOrt}{Düsseldorf}
+\newcommand{\myOrt}{München}
 
 % Datum der Abgabe
 \newcommand{\myAbgabeDatum}{\today}
@@ -33,19 +33,19 @@
 \newcommand{\myHochschulName}{FOM Hochschule für Oekonomie \& Management}
 
 % Standort der Hochschule
-\newcommand{\myHochschulStandort}{Düsseldorf}
+\newcommand{\myHochschulStandort}{München}
 
 % Studiengang
 \newcommand{\myStudiengang}{Wirtschaftsinformatik}
 
 % Art der Arbeit
-\newcommand{\myThesisArt}{Bachelor Thesis}
+\newcommand{\myThesisArt}{Expos\'e}
 
 % Zu erlangender akademische Grad
 \newcommand{\myAkademischerGrad}{Bachelor of Science (B.Sc.)}
 
 % Firma
-\newcommand{\myFirma}{Mustermann GmbH}
+\newcommand{\myFirma}{Fujitsu Germany GmbH}
 
 % Definition der Sprache
 \ifdefined\FOMEN
