Added KI Disclaimer

--- a/literatur/literatur.bib
+++ b/literatur/literatur.bib
@@ -313,3 +313,6 @@
 	howpublished = {\url{https://claude.ai/}},
 	note = {Platzhalter-Eintrag zur Aufloesung des Referenzschluessels}
 }
+
+
+% Ab Hier Tatsächliche Quellen die in der Arbeit verwendet werden.
