--- a/skripte/kapitelUebersicht.tex
+++ b/skripte/kapitelUebersicht.tex
@@ -2,7 +2,9 @@
 %-----------------------------------
 % Kapitel / Inhalte
 %-----------------------------------
-\input{kapitel/einleitung/einleitung}
-\input{kapitel/kapitel_1/kapitel_1}
-\input{kapitel/kapitel_2/kapitel_2}
-\input{kapitel/fazit/fazit}
+\input{kapitel/0_einleitung}
+\input{kapitel/1_Fragestellung}
+\input{kapitel/2_Theorie}
+\input{kapitel/3_Methode}
+\input{kapitel/4_Gliderung}
+\input{kapitel/5_Zeitplan}
