--- a/thesis_main.tex
+++ b/thesis_main.tex
@@ -606,12 +606,12 @@
 	\renewcommand{\thesection}{\AppendixName\ \arabic{section}}
 	\renewcommand\thesubsection{\AppendixName\ \arabic{section}.\arabic{subsection}}
 	\input{kapitel/anhang/anhang}
-  \input{kapitel/anhang/ki_anhang}
-  \input{kapitel/anhang/code_listings.tex}
+  %\input{kapitel/anhang/ki_anhang}
+  %\input{kapitel/anhang/code_listings.tex}
 \end{appendices}
 \addtocontents{toc}{\protect\setcounter{tocdepth}{2}}
 
-
+\input{kapitel/anhang/ki_disclaimer}
 \input{kapitel/anhang/erklaerung}
 \end{document}
 
