--- a/kapitel/4_Gliderung.tex
+++ b/kapitel/4_Gliderung.tex
@@ -1,3 +1,47 @@
 \newpage
 \section{Vorläufige Gliederung} \label{Gliederung}
-
+\todo{Noch mal drüber gehen: Kann ich das schon genauer benennen /weiter ungerglideren}
+\begin{enumerate}[label=\arabic*.]
+    \item \textbf{Einleitung}
+    \begin{enumerate}[label=\arabic{enumi}.\arabic*.]
+        \item Hintergrund
+        \item Zentrale Forschungsfrage
+        \item Ziel der Arbeit
+        \item Aufbau der Arbeit
+    \end{enumerate}
+    \item \textbf{Theoretische Grundlagen}
+    \begin{enumerate}[label=\arabic{enumi}.\arabic*.]
+        \item Begriffsdefinitionen und theoretische Einordnung
+        \item Stand der Forschung
+        \item Ableitung der Anforderungen an den Prototyp
+        \item Konkretisierung der Forschungsfragen
+    \end{enumerate}
+    \item \textbf{Methodik}
+    \begin{enumerate}[label=\arabic{enumi}.\arabic*.]
+        \item Forschungsdesign
+        \item Vorgehen bei der Prototypentwicklung
+        \item Auswahl der Experten und Durchführung
+        \item Auswertungsverfahren
+    \end{enumerate}
+    \item \textbf{Prototypische Umsetzung}
+    \begin{enumerate}[label=\arabic{enumi}.\arabic*.]
+        \item Konzeption und Architektur
+        \item Technische Implementierung
+        \item Funktionsbeschreibung und Demonstration
+    \end{enumerate}
+    \item \textbf{Expertenbeurteilung und Ergebnisse}
+    \begin{enumerate}[label=\arabic{enumi}.\arabic*.]
+        \item Durchführung der Evaluation
+        \item Darstellung der Ergebnisse
+        \item Kategorisierung und Auswertung
+    \end{enumerate}
+    \item \textbf{Diskussion}
+    \begin{enumerate}[label=\arabic{enumi}.\arabic*.]
+        \item Interpretation der Ergebnisse und Beantwortung der Forschungsfragen
+        \item Implikationen für die Praxis
+        \item Einordnung in den ökonomischen/technischen Kontext
+        \item Limitationen und kritische Reflexion
+        \item Ausblick und weiterer Forschungsbedarf
+    \end{enumerate}
+    \item \textbf{Fazit}
+\end{enumerate}
