--- a/kapitel/0_einleitung.tex
+++ b/kapitel/0_einleitung.tex
@@ -1,1 +1,3 @@
 \section{Einleitung} \label{intro}
+\todo[inline]{Aufführung SaaS Complexität bei Implementierungsprojekten, Unterschiedliche Komponenten und Integrierte Prozesse}
+
